--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "seed": "node seed.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
