vite added to package.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "dotenv": "^17.2.2"
+    "dotenv": "^17.2.2",
+    "vite": "^7.1.12"
   }
 }
